@@ -1,0 +1,4 @@
+	.text
+	.globl entry
+entry:
+	.long 0
