@@ -1559,14 +1559,6 @@ proc check_gc_sections_available { } {
 	    return 0
 	}
 
-	# VxWorks kernel modules are relocatable objects linked with -r,
-	# while RTP executables are linked with -q (--emit-relocs).
-	# Both of these options are incompatible with --gc-sections.
-	if { [istarget *-*-vxworks*] } {
-	    set gc_sections_available_saved 0
-	    return 0
-	}
-
 	# Check if the ld used by gcc supports --gc-sections.
 	set ld_output [remote_exec host $ld "--help"]
 	if { [ string first "--gc-sections" $ld_output ] >= 0 } {
